[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = flake8_qgis

author = Joona Laine
author_email = joona@gispo.fi
maintainer = Joona Laine
maintainer_email = joona@gispo.fi

version = 0.1.4

description = Flake8 plugin for QGIS python plugins.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flake8,qgis,QGIS,PyQGIS

url = https://github.com/GispoCoding/flake8-qgis

license = MIT license

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: ConsoleJ
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Framework :: Flake8

[options]
packages = find:
python_requires = >=3.6.1
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
    astor>=0.1

[options.entry_points]
flake8.extension =
    QGS=flake8_qgis:Plugin

[tool:pytest]
doctest_encoding = utf-8

[pydocstyle]
match_dir = flake8_qgis
ignore = D104, D105, D107, D301, D413, D203, D212, D100

[flake8]
max_line_length = 88
exclude = tests/*,.tox/*,.nox/*,docs/*
ignore = H301,H306,H404,H405,W503,D105,D413,D103,D107,E252,N803,E203,C416,A001,A003,P102,ANN101

[isort]
import_heading_stdlib=Core Library modules
import_heading_thirdparty=Third party modules
import_heading_firstparty=First party modules
import_heading_localfolder=Local modules
include_trailing_comma=True
indent='    '
known_third_party = click,pytest,setuptools
length_sort=0
line_length=80
multi_line_output=3

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=false
warn_unused_ignores=true
strict_optional=true
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=false
disallow_incomplete_defs=true
follow_imports=skip
mypy_path=typeshed/pyi:typeshed/imports
